add destination and distance bar to the AR fragment , fix issue with the my location variable

--- a/app/src/main/res/layout/start_ar_fragment.xml
+++ b/app/src/main/res/layout/start_ar_fragment.xml
@@ -6,13 +6,46 @@
     android:layout_height="match_parent"
     tools:context="com.example.locations.AR.StartARFragment">
 
-    <fragment
-        android:id="@+id/sceneView"
-        android:name="com.google.ar.sceneform.ux.ArFragment"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/Navigating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Navigating to:"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <TextView
+                android:id="@+id/distance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:hint="Distance:"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <fragment
+            android:id="@+id/sceneView"
+            android:name="com.google.ar.sceneform.ux.ArFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:layout_editor_absoluteX="0dp"
+            tools:layout_editor_absoluteY="0dp" />
+    </LinearLayout>
+
 
     <Button
         android:id="@+id/btnBack"
