--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -269,5 +269,12 @@
         android:name="com.example.locations.AR.StartARFragment"
         android:label="AR"
         tools:layout="@layout/start_ar_fragment">
+        <action
+            android:id="@+id/action_AR_to_Nav"
+            app:destination="@id/Nav"
+            app:enterAnim="@anim/from_left"
+            app:exitAnim="@anim/to_right"
+            app:popEnterAnim="@anim/to_right"
+            app:popExitAnim="@anim/to_right" />
     </fragment>
 </navigation>
