developed arrival screen

--- a/app/src/main/res/layout/start_ar_fragment.xml
+++ b/app/src/main/res/layout/start_ar_fragment.xml
@@ -46,7 +46,39 @@
             tools:layout_editor_absoluteY="0dp" />
     </LinearLayout>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/arrivel_card_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="8dp"
+        android:visibility="gone"
+        app:cardBackgroundColor="@color/modal_window"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="470dp"
+            android:background="@color/modal_window"
+            android:padding="16dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="You have arrived!"
+                android:textSize="30dp"
+                android:textColor="@color/white"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
     <Button
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
